---
source: tests/parser/main.rs
description: "// Input file:\nlibsl \"1.0.0\";\n\nlibrary decl_type_alias_lhs_pointer;\n\ntypealias *Wrong = VeryWrong;\n"
input_file: tests/parser/test-data/decl-type-alias-lhs-pointer.libsl
---
Err("encountered a syntax error at L5:10: extraneous input \'*\' expecting {\'implements\', \'static\', Identifier}")
